--- a/Pipfile
+++ b/Pipfile
@@ -7,6 +7,10 @@ verify_ssl = true
 
 [packages]
 django = "*"
+psycopg2-binary = "==2.8.3"
+whitenoise = "==4.1.4"
+gunicorn = "==19.9.0"
+dj-database-url = "==0.5.0"
 
 [requires]
-python_version = "3.6"
+python_version = "3.8"
