--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ psycopg2-binary = "==2.8.3"
 whitenoise = "==4.1.4"
 gunicorn = "==19.9.0"
 dj-database-url = "==0.5.0"
+django-tracking-analyzer = "*"
 
 [requires]
 python_version = "3.8"
