--- a/Pipfile
+++ b/Pipfile
@@ -12,6 +12,7 @@ whitenoise = "==4.1.4"
 gunicorn = "==19.9.0"
 dj-database-url = "==0.5.0"
 django-tracking-analyzer = "*"
+django-google-analytics-app = "*"
 
 [requires]
 python_version = "3.8"
